Mms: Add Quick Message Support (1/2)
This adds the ability to display a pop-up Quick Message when a SMS
message is received.  The user can swipe between multiple messages
and reply to messages individually.

Features:
  - Display pop-up Quick Message dialog when message received
  - Multi-message support with swipe between messages
  - Reply to individual messages
  - Mark individual messages as 'Read' or dismiss them all
  - 'Wake and unlock' device on message received

Known issues:
  - Notification light gets dismissed as message pops up when
    screen is locked and does not restart when screen times out
    without user interaction (i.e. message was not seen)

Notes:
  - This only supports SMS, I have no plan for adding MMS support

Screenshot:
  https://dl.dropbox.com/u/50993944/Screenshot_2012-08-26-13-45-10.png

Thank you to:
  - Blunden for the drawables
  - Devatwork for code review and help
  - Burnsra for testing

Patchset 2  - Fix whitespace errors and some cleanup
Patchset 3  - Fix orientation change editText reset
            - Initialize mCurrentQm to prevent NPE
Patchset 4  - Fix HDPI 9patch drawable
Patchset 5  - Rebase
Patchset 6  - Better EditText object handling
            - Better dismiss keyboard handling
            - Fix NPE and a few other minor bugs
Patchset 7  - More formatting changes
Patchset 8  - Fix EditText 'theme'
Patchset 9  - Update commit message to match framework message
Patchset 10 - Better 'Wake and unlock' handling
Patchset 11 - Fix layout for HDPI and MDPI devices
            - Fix small derps introduced by patchset 10
            - Remove WIP
Patchset 12 - Add a separate layout for XHDPI to make the dialog
              a bit bigger on high dpi screens (e.g. S3 and GN)

Change-Id: I0af06017a38b264d8ceda69b6fdfbd1f759bf2b5

Conflicts:

	AndroidManifest.xml
	res/values/strings.xml
	res/xml/preferences.xml
	src/com/android/mms/ui/MessagingPreferenceActivity.java

I would like to add that some of the code CM used for this fea

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_DRM" />
 
+    <!-- Needed for QuickMessage -->
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+
     <application android:name="MmsApp"
             android:label="@string/app_label"
             android:icon="@mipmap/ic_launcher_smsmms"
@@ -321,6 +324,13 @@
                  android:permission="android.permission.BIND_REMOTEVIEWS"
                  android:exported="false" />
 
+        <!-- QuickMessage support -->
+        <activity android:name=".quickmessage.QuickMessage"
+          android:theme="@android:style/Theme.Holo.Dialog"
+          android:configChanges="orientation|screenSize"
+          android:launchMode="singleTop" />
 
-    </application>
+        <receiver android:name=".quickmessage.ClearAllReceiver" />
+
+        </application>
 </manifest>
