QuickReply: Quick reply from notification WIP
This is a WIP! Things are still being worked on!
Figured you would want to play, and maybe share things
I have no found broken yet.

Signed-off-by: Adam Fisch <adammfisch@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,6 +40,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_DRM" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application android:name="MmsApp"
             android:label="@string/app_label"
@@ -119,6 +120,10 @@
                <category android:name="android.intent.category.DEFAULT" />
                <data android:mimeType="image/*" />
            </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.QuickReply"
+            android:theme="@android:style/Theme.Holo.Dialog">
         </activity>
 
         <activity-alias android:name=".ui.ForwardMessageActivity"
