--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_DRM" />
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application android:name="MmsApp"
             android:label="@string/app_label"
@@ -121,6 +123,11 @@
                <data android:mimeType="image/*" />
            </intent-filter>
         </activity>
+
+        <activity android:name=".ui.QuickReply"
+            android:theme="@android:style/Theme.Holo.Dialog"
+            android:taskAffinity="com.android.mms.ui.QuickReply"
+            android:excludeFromRecents="true"/>
 
         <activity-alias android:name=".ui.ForwardMessageActivity"
                   android:targetActivity=".ui.ComposeMessageActivity"
