--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -145,7 +145,9 @@
             android:name=".ui.QuickReply"
             android:excludeFromRecents="true"
             android:taskAffinity="com.android.mms.ui.QuickReply"
-            android:theme="@android:style/Theme.Holo.Dialog" />
+            android:theme="@android:style/Theme.Holo.Dialog" 
+	    android:launchMode="singleTop" />
+
         <activity
             android:name=".ui.QuickReplyMulti"
             android:excludeFromRecents="true"
