Fix SecurityException when adding a captured photo
Change-Id: I3f6e950991a0492b247c52f6be372e6dfd7a5123
Signed-off-by: Gergely Szell (sethyx) <szell@hu.ibm.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -343,7 +343,8 @@
         <provider
             android:name="TempFileProvider"
             android:authorities="mms_temp_file"
-            android:multiprocess="true" />
+            android:multiprocess="true"
+            android:exported="true" />
 
         <activity android:name=".ui.MiniPreferenceActivity" >
             <intent-filter>
