Fix group message participant list
Fixes force close when viewing group participants

Change-Id: I052f193754bab9d2a8e36b6e9eaeb982f7e90eb8

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -190,6 +190,10 @@
             android:label="@string/edit_slideshow_activity"
             android:theme="@style/MmsHoloTheme" />
         <activity
+            android:name=".ui.RecipientListActivity"
+            android:theme="@style/MmsHoloTheme"
+            android:label="@string/recipient_list_activity" />
+        <activity
             android:name=".ui.SlideEditorActivity"
             android:label="@string/edit_slide_activity"
             android:theme="@style/MmsHoloTheme"
