Prompt users Mms can't receive msgs if storage is full
Telephony framework will report operators Sms Memory is full if
Device storage running out. Then operators won't send the target
any messages until storage is available next time.

Refer to
frameworks/opt/telephony/src/java/com/android/internal/telephony/SmsStorageMonitor.java

Change-Id: I7712355eac17c6adf3ab51ddb0907d52cb7759ee
Signed-off-by: Roger Chen <cxr514033970@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -361,6 +361,13 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".ui.SmsStorageMonitor" >
+            <intent-filter>
+                <action android:name="android.intent.action.DEVICE_STORAGE_FULL" />
+                <action android:name="android.intent.action.DEVICE_STORAGE_NOT_FULL" />
+            </intent-filter>
+        </receiver>
+
         <!-- Widget -->
         <receiver
             android:name=".widget.MmsWidgetProvider"
